--- a/CS3-FA2.html
+++ b/CS3-FA2.html
@@ -13,11 +13,11 @@
     <input id="num2" type="number" placeholder="Second number">
 
     <br>
-    <button onclick="calculate('+')">+</button>
-    <button onclick="calculate('-')">-</button>
-    <button onclick="calculate('*')">*</button>
-    <button onclick="calculate('/')">/</button>
-    <button onclick="calculate('%')">%</button>
+    <button onclick="add()">+</button>
+    <button onclick="subtract()">-</button>
+    <button onclick="multiply()">*</button>
+    <button onclick="divide()">/</button>
+    <button onclick="modulus()">%</button>
 
     <p id="result">Results will be displayed here.</p>
   </div>
